Changes in quota-tools from 3.12 to 3.13
* added dynamic mountpoint array allocation (Jan Kara)
* made quotacheck(8) more friendly for journaled quota (Jan Kara)
* changed configure to detect whether nls is needed (Tomasz Kloczko, Jan Kara)
* added JFS into a set of supported filesystems (David Kleikamp)
* added French translation (Jerome Schell)
* fixed quota tools to set of grace time only after exceeding soft limit, not
  at reaching (Jan Kara)
* fixed exit codes of setquota(8) and edquota(8) (Jan Kara)
* updated Polish translations (Jakub Bogusz)
* fixed "bashism" is Makefile (Michael Meskes)

Changes in quota-tools from 3.11 to 3.12
* fixed bug in quotaon(8) reporting (Paul Szabo)
* added manpages for xqmstats & quotastats (Max Vozeler)
* fixed a few memleaks (Jan Kara)
* fixed bug when root had no usage and limits (Jan Kara)
* added a few perl wrappers for LDAP (Stefan Adams)
* added note about availability of -r option to manpages (Jan Kara)
* maximal number of groups is now got via sysconf (Nathan Scott)
* added batch mode to the setquota(8) (Jan Kara)
* added reference to setquota(8) to manpages of other tools (Jan Kara)
* fixed bug in --port option of rquotad (Max Kalika)
* updated quota documentation (Jan Kara)
* disabling nls via configure (Jan Kara)
* fixed warning when gettext not used (Peter Breitenlohner)
* fixed typo in rquotad.8 (Peter Breitenlohner)
* fixed compiler warning in quotacheck.c (Peter Breitenlohner)
* added config option for putting some important binaries to /sbin regardless
  $(prefix) (Jan Kara)
* added config option to warnquota(8) for CCing admin only specified amount of
  time before grace time runs out (Jan Kara)

Changes in quota-tools from 3.10 to 3.11
* quota-tools should again use old RPC protocol when needed (Jan Kara)
* add FIOQSIZE for x84_64 architecture (Jan Kara)
* quotacheck(8) does not count quota files to usage (Jan Kara)
* tools now honor journalled quota mount options (Jan Kara)