@@ -78,6 +78,7 @@ to make backups of the quota file before writing the new data.
 .B \-v
 .B quotacheck
 reports its operation as it progresses.  Normally it operates silently.
+If the option is specified twice, also the current directory is printed.
 .TP
 .B \-d
 Enable debugging mode.  It will result in a lot of information which can
