@@ -25,6 +25,7 @@
 #define FL_ALL 256		/* Scan all mountpoints with quota? */
 #define FL_NOROOT 512		/* Scan all mountpoints except root */
 #define FL_BACKUPS 1024		/* Create backup of old quota file? */
+#define FL_VERYVERBOSE 2048	/* Print directory names when checking */
 
 extern int flags;		/* Options from command line */
 extern struct util_dqinfo old_info[MAXQUOTAS];	/* Loaded info from file */
